# Open-CV_ROS_Robot_tracking

./: CMakeLists.txt  calc_red_center2.cpp  pub_cmd_vel2.cpp
